# MeetingRecordApp

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.claude/workflows/: build-meetingapp.js
.github/workflows/: ci.yml
.scratch/speaker-attribution-core/: PRD.md
.scratch/speaker-attribution-core/issues/: 01-naming-layer-label-once.md  02-gemini-hands-off-diarization.md  03-enable-diarize-build-models.md  04-voiceprint-memory.md
docs/: PRD.md  STRUCTURE.md  WINDOWS_HANDOFF.md
docs/agents/: triage-labels.md
docs/superpowers/specs/: 2026-07-03-speaker-identity-srt-design.md  2026-07-04-speaker-attribution-core-design.md
scripts/: fetch-diarize-models.mjs  gen-placeholder-icon.cjs
src/: App.test.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.diarize.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_transcript_runs.sql  003_speaker_labels.sql  004_speaker_voiceprints.sql
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  tray.rs
src-tauri/src/ai/: claude.rs  gemini.rs  gemini_audio.rs  keychain.rs  mod.rs  ollama.rs  openai.rs  provider.rs  templates.rs
src-tauri/src/audio/: live.rs  microphone.rs  mixer.rs  mod.rs  recorder.rs  system_audio.rs
src-tauri/src/detection/: mod.rs  monitor.rs  speaker.rs
src-tauri/src/export/: json.rs  markdown.rs  mod.rs  notion.rs  pdf.rs  srt.rs
src-tauri/src/storage/: database.rs  files.rs  mod.rs  search.rs
src-tauri/src/transcription/: diarization.rs  mod.rs  model.rs  processor.rs  whisper.rs  worker.rs  zhconvert.rs
src-tauri/src/video/: ffmpeg.rs  mod.rs  selector.rs
src-tauri/tests/: speaker_pipeline_e2e.rs
src/components/Export/: ExportDialog.tsx
src/components/Floating/: AudioLevel.tsx  MiniPanel.tsx
src/components/Meeting/: MeetingDetail.tsx  MeetingList.test.tsx  MeetingList.tsx  MeetingPlayer.tsx  Transcript.test.tsx  Transcript.tsx
src/components/Settings/: AISettings.tsx  AudioSettings.tsx  GeneralSettings.tsx  SettingsPage.tsx  controls.tsx
src/components/Summary/: ActionItems.tsx  SummaryEditor.tsx  SummaryView.test.tsx  SummaryView.tsx
src/components/Tray/: TrayIcon.tsx  TrayMenu.tsx
src/components/common/: Button.tsx  Modal.tsx  Tooltip.tsx
src/hooks/: useMeetings.ts  useRecording.ts  useTranscription.ts
src/lib/: constants.ts  format.test.ts  format.ts  markdown.test.ts  markdown.ts  mocks.ts  tauri.ts  types.ts
src/stores/: recordingStore.test.ts  recordingStore.ts  settingsStore.test.ts  settingsStore.ts
src/styles/: globals.css
